Main list with network

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
 
     <color name="account_title">#00ADEF</color>
     <color name="email">#808080</color>
+    <color name="divider">#F2F2F2</color>
 </resources>
