--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,10 +8,14 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 
+    <color name="app_signature_color">#00ADEF</color>
     <color name="account_title">#00ADEF</color>
     <color name="email">#808080</color>
     <color name="divider">#F2F2F2</color>
     <color name="master_pass_dialog_bg">#FFFFFF</color>
     <color name="master_pass_dialog_title">#FFFFFF</color>
-    <color name="app_signature_color">#00ADEF</color>
+    <color name="master_pass_dialog_text_bottom">#FFFFFF</color>
+    <color name="master_pass_dialog_button_bg">#FFFFFF</color>
+    <color name="master_pass_dialog_button_outline_bg">#2491D6</color>
+
 </resources>
