--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,5 +17,7 @@
     <color name="master_pass_dialog_text_bottom">#FFFFFF</color>
     <color name="master_pass_dialog_button_bg">#FFFFFF</color>
     <color name="master_pass_dialog_button_outline_bg">#2491D6</color>
+    <color name="account_pass_dialog_title">#FFFFFF</color>
+    <color name="account_pass_dialog_pass">#FFFFFF</color>
 
 </resources>
